# guardrails-validator

./: .gitignore  LICENSE  README.md  config.py  llm_adapters.py  main.py  models.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: gemini_adapter.py  mock_adapter.py
core/: __init__.py  db_logger.py  verifier.py
examples/: product_review_validation.py  superhero_validation.py  validation_helpers.py
examples/domains/: __init__.py  product_review_config.py  superhero_config.py
model_adapters/: gemini_adapter.py  gpt_adapter.py  groq_adapter.py  mock_adapter.py
tests/: test_adapters.py  test_db_logger.py  test_integration.py  test_models.py
